<resources>
    <string name="app_name" >Bingo </string>
    <string name="navigation_drawer_open" >Open navigation drawer </string>
    <string name="navigation_drawer_close" >Close navigation drawer </string>
    <string name="sky_sun" >Sunny day  </string>
    <string name="deco_bulb" >Decoration bulb </string>
    <string name="add_pet" >Add Pet </string>
    <string name="rate_good" >Good </string>
    <string name="normal" >Normal </string>
    <string name="rate_bad" >Bad </string>
    <string name="ble_scanning_info" >Searching devcies… </string>
    <string name="ble_scan_result_info" >"""%d devices have been found""" </string>
    <string name="share" >Share </string>
    <string name="rank" >Rank </string>
    <string name="months" >months </string>
    <string name="of" > of </string>
    <string name="manage_pet" >Manage pet </string>
    <string name="manage_device" >Manage device </string>
    <string name="my_page" >My page </string>
    <string name="logout" >Log out </string>
    <string name="finish_sign_up" >"Sign up completed.
E-mail sent to registered your e-mail.
Check the confirmation mail." </string>
    <string name="confirm" >Confirm </string>
    <string name="not_certified" >Account is not certified. Please check your confirm e-mail </string>
    <string name="prompt_email" >E-mail </string>
    <string name="password" >Password </string>
    <string name="sign_in" >Log in </string>
    <string name="cancel" >Cancel </string>
    <string name="start_scan" >Start scan </string>
    <string name="stop_scan" >Stop scan </string>
    <string name="setting_profile_text" >Profile </string>
    <string name="change_password" >Change Password </string>
    <string name="account" >Account </string>
    <string name="member_type" >User type </string>
    <string name="birthday_hint" >Date of Birth ex>YYYYMMDD </string>
    <string name="female" >Female </string>
    <string name="male" >Male </string>
    <string name="sex" >Sex </string>
    <string name="phone_number" >Phone number </string>
    <string name="name" >Name </string>
    <string name="user_info" >User information </string>
    <string name="password_check" >Password confirmation </string>
    <string name="email_hint" >E-mail (xxx@abc.com) </string>
    <string name="modify" >Modify </string>
    <string name="mypage_apply" >Apply </string>
    <string name="addFriend_searchBtn" >Add Friend </string>
    <string name="setting" >Settings </string>
    <string name="info_add_pet" >Registered pet not found. Moving to pet registration menu. </string>
    <string name="info_add_device" >Registered device not found. Do you want to moving to device registration menu? </string>
    <string name="sign_up" >Sign up </string>
    <string name="device_scan" >Device scan </string>
    <string name="edit_pet" >Modify pet </string>
    <string name="add" >Add </string>
    <string name="edit" >Modify </string>
    <string name="previous" >Previous </string>
    <string name="next" >Next </string>
    <string name="info_personal" >Private information </string>
    <string name="more_info" >Additional information </string>
    <string name="birthday" >Date of Birth </string>
    <string name="modi_info" >Modify Information </string>
    <string name="account_settings" >Account settings </string>
    <string name="remove_account" >Remove account </string>
    <string name="service_inquiry" >Services / Contact us </string>
    <string name="notice" >Notice </string>
    <string name="terms_conditions" >Terms of conditions </string>
    <string name="inquiry" >Contact us </string>
    <string name="auto_login" >Auto log-in </string>
    <string name="find_password" >" <u>Find Password</u>"</string>
    <string name="sign_up_under" >"<u> sign up</u>"</string>
    <string name="empty_mail_pw" >Please check your e-mail / password </string>
    <string name="not_internet_connect" >Please check your internet access </string>
    <string name="fail_login" >Log-in failed </string>
    <string name="check_mail" >Please check your e-mail </string>
    <string name="need_signup" >You need to sign-up to use Bingo </string>
    <string name="home_ment" >\'%1$s\'s love index rate is %2$s </string>
    <string name="sync_time" >%s standard </string>
    <string name="connected" >Conneting </string>
    <string name="connect_fail" >Connection failed </string>
    <string name="breed" >Breeds </string>
    <string name="weight" >Weight </string>
    <string name="register_picture" >Register picture </string>
    <string name="add_friend" >Add friends </string>
    <string name="connect" >Connect </string>
    <string name="disconnect" >Disconnect </string>
    <string name="friend_list" >Friends list </string>
    <string name="please_open_blue" >Please turn on your Bluetooth </string>
    <string name="friend_ranking" >Friends rank </string>
    <string name="ranking_total" >Total rank </string>
    <string name="unit" >Unit </string>
    <string name="connecting" >Connecting.. </string>
    <string name="disconnect_pet_device" >Disconnect device linked to your pet? </string>
    <string name="click_connect_device" >Click to connect new devices </string>
    <string name="want_leave_account" >Do you want to leave your account? </string>
    <string name="fail" >Failure </string>
    <string name="week_compare" >Weekly report </string>
    <string name="daily_report" >Daily report </string>
    <string name="date" >Date </string>
    <string name="item" >Items </string>
    <string name="sync" >Sync </string>
    <string name="search" >Search </string>
    <string name="title_sub" >"%1$s' today detail data "</string>
    <string name="title_week_comp" >"%1$s' weekly comparison" </string>
    <string name="title_detail_item" >"%1$s' daily %2$s" </string>
    <string name="title_daily" >"%1$s' daily report" </string>
    <string name="rate_1" >Insufficient </string>
    <string name="rate_2" >Low </string>
    <string name="rate_3" >Normal </string>
    <string name="rate_4" >Sufficient </string>
    <string name="rate_5" >Fluent </string>
    <string name="notification_title" >Device Synchronizing </string>
    <string name="change_pet_device" >Change device connected to your pet? </string>
    <string name="rate_6" >Bad </string>
    <string name="rate_7" >Good </string>
    <string name="comp_item_1" >Change drinking item </string>
    <string name="comp_item_2" >Change pet toy </string>
    <string name="comp_item_3" >Change pet home </string>
    <string name="comp_item_4" >Change pet neck band </string>
    <string name="comp_item_5" >Prescribe injection </string>
    <string name="comp_item_6" >Take medicine </string>
    <string name="comp_item_7" >Change pet feed </string>
    <string name="comp_item_8" >Change pet cushion </string>
    <string name="please_date" >Please input date </string>
    <string name="conect_fail_msg" >Device connection failed. Try again? </string>
    <string name="factory_reset" >Reset Factory </string>
    <string name="must_connect" >Try again after conncting devices. </string>
    <string name="change_device" >Change device </string>
    <string name="friend_add_message" >Will you add %1$s to your friend? </string>
    <string name="remove" >Remove </string>
    <string name="need_sign_up" >"""Please sign up to use Bingo""" </string>
    <string name="ranking_ment" >"Yesteday's %1$s love index rank is %2$s%% from above." </string>
    <string name="ranking_low_ment" >Your rank is low. Please give more love to %1$s. </string>
    <string name="ranking_nodata_ment" >No rank found. </string>
    <string name="privacy_policy" >Private policy term </string>
    <string name="sun_exposure" >Daily sunlight exposure </string>
    <string name="ultraviolet" >UV rays exposure </string>
    <string name="steps" >steps </string>
    <string name="server_error" >Server error. Please try again later. </string>
    <string name="login_id_input_error" >User and ID are same. \nPlease check once again. </string>
    <string name="user_no_exist_error" >Registered user not found </string>
    <string name="registerd_user_error" >Already registered user </string>
    <string name="yes" >Yes </string>
    <string name="no" >No </string>
    <string name="press_one_more_text" >"Press once more, the program will be closed." </string>
    <string name="profile_change_text" >Profile has been changed. </string>
    <string name="profile_change_error" >Fail to change profile </string>
    <string name="pet_info_input_error" >Please input correct pet information </string>
    <string name="id_input_error" >Please input correct ID </string>
    <string name="pw_input_error" >Please input correct password </string>
    <string name="info_input_error" >Please input correct user information </string>
    <string name="sign_in_success" >Sign in success </string>
    <string name="act_time" >Act time </string>
    <string name="play_time" >Play time </string>
    <string name="rest_time" >Rest time </string>
    <string name="synchronizing" >Synchronizing… </string>
    <string name="find_password_text" >Please input your ID.\n\nE-mail for reset will be sent to your e-mail.\n </string>
    <string name="find_password_ok" >Please check your e-mail. </string>
    <string name="find_password_error" >Please re-check your e-mail. </string>
    <string name="care_me" >Person who care me </string>
    <string name="care_who" >Person who I care </string>
    <string name="fail_remove_friend" >"\""Fail to remove friend.\\nPlease try again\""" </string>
    <string name="success_logout" >Successfully logged out </string>
    <string name="fail_signup" >Fail sign up </string>
    <string name="fail_pet_data" >Fail pet data transfer </string>
    <string name="info_friend_add" >"Please add up friend to monitor my pet's health status. "</string>
    <string name="date_signup" >Signed up date </string>
    <string name="info_comp" >Choose items to compare. </string>
    <string name="year" >Year </string>
    <string name="month" >Month </string>
    <string name="day" >Day </string>
    <string name="outdoor_morn_eve" >Except morning and evening </string>
    <string name="bulb" >Bulb </string>
    <string name="color_temp" >Color temperature </string>
    <string name="cloud_shadow" >Cloudy day shadow </string>
    <string name="ment_pink_box_1" >" Yesterday \""%1$s\""'s love score was \""%2$s\""." </string>
    <string name="ment_pink_box_2" >"Today \""%1$s\""'s love score is \""%2$s\""." </string>
    <string name="ment_pink_box_3" >"Today \""%1$s\""'s love score is \""%2$s\""." </string>
    <string name="ment_love_1_a" >"Love index for \""%1$s\""is very high. Keep your love to \""%1$s\"" like now." </string>
    <string name="ment_love_1_b" >"Love index for \""%1$s\""is high. Give more your love to \""%1$s\"", you will get A soon." </string>
    <string name="ment_love_1_c" >"Love index for \""%1$s\""is normal. How about play with \""%1$s\"" today?  \""%1$s\""'s love inddex will increase. " </string>
    <string name="ment_love_1_d" >"Love index for \""%1$s\""is not enough. \""%1$s\"" need your care desperately. Recommend to spend your time with exercise and walk with your pet for your pet health.  " </string>
    <string name="ment_love_1_f" >"Love index for \""%1$s\""is not enough. \""%1$s\"" need your care desperately. You must spend your time with exercise and walk with your pet." </string>
    <string name="ment_love_2_a" >"Love index for \""%1$s\""is very high. Keep your love to \""%1$s\"" like now." </string>
    <string name="ment_love_2_b" >"Love index for \""%1$s\""is high. Give more your love to \""%1$s\"", you will get A soon." </string>
    <string name="ment_love_2_c" >"Love index for \""%1$s\""is normal. How about play with \""%1$s\"" today?  \""%1$s\""'s love inddex will increase. " </string>
</resources>