<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="myPageEditModel"
            type="kr.co.jmsmart.bingo.view.com.viewModel.MyPageEditViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#eeeeee">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#ffffff"
            android:layout_margin="20dp"
            app:contentPadding="20dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_email"
                    android:textSize="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@={myPageEditModel.user.userId}"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{myPageEditModel.isModify}"
                    android:text="@={myPageEditModel.user.name}"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{myPageEditModel.isModify}"
                    android:text="@={myPageEditModel.user.phone}"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:textSize="10dp"/>
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/radio_user">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mypage_radio_male"
                        android:enabled="@{myPageEditModel.isModify}"
                        android:text="@string/male"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/mypage_radio_female"
                        android:enabled="@{myPageEditModel.isModify}"
                        android:text="@string/female"/>
                </RadioGroup>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday"
                    android:textSize="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="@{myPageEditModel.isModify}"
                    android:text="@={myPageEditModel.user.birth}"
                    android:textSize="15dp"
                    android:layout_marginBottom="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_signup"
                    android:textSize="10dp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@={myPageEditModel.user.registerDttm}"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@={myPageEditModel.applyOrModify}"
                    android:onClick="@{() -> myPageEditModel.onClick()}"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</layout>