<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@android:color/white">
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:paddingTop="32dp"
        android:paddingBottom="42dp"
        android:orientation="vertical">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:inputType="date"/>
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_year"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="date"
                android:hint="@string/year"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_month"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/month"/>
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/input_day"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="date"
                android:hint="@string/day"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item"/>
        <GridView
            android:id="@+id/gv_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numColumns="3"/>

    </android.support.v7.widget.LinearLayoutCompat>
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_cancel"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@android:string/cancel"
            android:textColor="#5a000000"
            android:onClick="clickCancel"/>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/bt_ok"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@android:string/yes"
            android:textColor="@color/colorPrimary"
            android:onClick="clickOk"/>
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.CardView>
