<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.co.jmsmart.bingo.view.com.FindPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#eeeeee">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#ffffff"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="58dp"
        android:layout_marginBottom="138dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="36dp"
        android:layout_marginBottom="48dp"
        android:background="#ffffff"
        android:id="@+id/layout_Id_Password">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_password_text"
            android:textSize="14sp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ID"
            android:inputType="textEmailAddress"
            android:textSize="14sp"
            android:hint="@string/email_hint"
            android:backgroundTint="@color/colorPrimary"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="#ffffff">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="9.3sp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_before"
                android:onClick="onNoClick"
                android:textColor="#5a000000"
                android:lineSpacingExtra="0sp"
                android:text="@string/previous"
                android:background="#00000000"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/btn_next"
                android:onClick="onYesClick"
                android:textColor="#ff6186"
                android:lineSpacingExtra="0sp"
                android:text="@string/next"
                android:background="#00000000"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
